...
            </objects>
            <point key="canvasLocation" x="-567" y="-224"/>
        </scene>
        <!--Contacts-->
        <scene sceneID="4jb-CX-PAM">
            <objects>
                <viewController storyboardIdentifier="ContactListController" id="X3a-Gw-O8T" customClass="ContactListView" customModule="Contacts" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="ofl-Cy-CSi">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="64" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="KUe-U5-K24">
                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
...
                                        <rect key="frame" x="0.0" y="28" width="375" height="56"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="zgP-cx-UOy" id="eD5-Lf-BKy">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="55.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First Name" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="snd-Ad-kAd">
                                                    <rect key="frame" x="24" y="20" width="80" height="15.5"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="5ST-gB-gA0"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                    <color key="textColor" red="0.29019607843137252" green="0.29019607843137252" blue="0.29019607843137252" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
...
                            <constraint firstItem="jen-dl-Nxk" firstAttribute="top" secondItem="Qei-uA-1Xe" secondAttribute="top" constant="20" id="xOU-yt-yP7"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="Lti-jl-5n0"/>
                    </view>
                    <navigationItem key="navigationItem" id="LMK-qS-mZg">
                        <barButtonItem key="backBarButtonItem" title="Contacts" id="t5N-lD-DRk"/>
                        <barButtonItem key="rightBarButtonItem" title="Edit" id="bza-Hx-9Ch">
                            <color key="tintColor" red="0.31372549020000001" green="0.89019607840000003" blue="0.76078431369999999" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <action selector="editContact:" destination="MJO-pL-D3i" id="hnz-dj-bei"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="wPM-Po-hW7">
                            <color key="tintColor" red="0.31372549020000001" green="0.89019607840000003" blue="0.76078431369999999" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <action selector="cancel:" destination="lJb-mg-qG1" id="abs-GM-k7n"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Done" id="CFQ-UG-QkV">
                            <color key="tintColor" red="0.31372549019607843" green="0.8901960784313725" blue="0.76078431372549016" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <action selector="saveOrUpdateContact:" destination="lJb-mg-qG1" id="DVU-u0-5qJ"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
