...
    
    //MARK: Variables
    var presenter: ContactAUPresenterProtocol?
    var contactDetails:ContactDetails = ContactDetails(id: 0, firstNameFromAPI: "", lastNameFromAPI: "", favouriteFromAPI: false, emailFromAPI: "", phoneNumberFromAPI: "", profilePicFromAPI: "")
    
    //MARK: Constants
    let contactDetailsUpdatePlaceHolders = ["First Name","Last Name","mobile","email"]
    
    //Outlets
    @IBOutlet weak var contactsUpdateTableView: UITableView!
    @IBOutlet weak var profilePic: UIImageView!
    
    override func viewDidLoad() {
...
